--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "Joel Thoms",
   "license": "MIT",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "cross-env NODE_ENV=production node src/index.js --colors",
+    "dev": "cross-env NODE_ENV=development nodemon src/index.js",
     "test": "jest",
     "test:coverage": "npm run test -- --coverage",
     "lint": "eslint ."
@@ -17,6 +17,7 @@
     "boxen": "^4.1.0",
     "chalk": "^2.4.2",
     "config": "^3.2.2",
+    "cross-env": "^6.0.3",
     "express": "^4.17.1",
     "fs-extra": "^8.1.0",
     "js-yaml": "^3.13.1",
