--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "moment": "^2.24.0",
     "random-ipv6": "^1.0.2",
     "shell-quote": "^1.7.2",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.2.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.18",
