--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@paciolan/express-easy-routes": "^1.0.13",
+    "ansi-escapes": "^4.2.1",
     "bcryptjs": "^2.4.3",
     "boxen": "^4.1.0",
     "chalk": "^2.4.2",
