--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "the-terminal-daemon",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "The Terminal Daemon",
   "author": "Joel Thoms",
   "license": "MIT",
@@ -26,6 +26,7 @@
     "lokijs": "^1.5.7",
     "mojiscript": "^0.13.9",
     "moment": "^2.24.0",
+    "project-name-generator": "^2.1.7",
     "random-ipv6": "^1.0.2",
     "shell-quote": "^1.7.2",
     "uuid": "^3.3.3",
