--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,15 +9,20 @@
       "request": "launch",
       "name": "Launch Program",
       "program": "${workspaceFolder}/src/index.js",
-      "args": ["--colors"],
-      "sourceMaps": true
+      "args": [
+        "--colors"
+      ],
+      "sourceMaps": true,
+      "console": "integratedTerminal",
     },
     {
       "type": "node",
       "request": "launch",
       "name": "Jest Tests",
       "program": "${workspaceFolder}/node_modules/.bin/jest",
-      "args": ["-inspector"],
+      "args": [
+        "-inspector"
+      ],
       "sourceMaps": true,
       "smartStep": true,
       "console": "integratedTerminal",
